@@ -96,4 +96,6 @@ int rem (G_REAL, G_HUGEINT);
 
 char* Qf(G_REAL, char*);
 
+char getDecPoint();
+
 #endif /* general_functions.h */
